retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <description>The forms object is used to create standardized forms for submission, routing, and approval. It was initially created to migrate EPA Webforms to the BAP, but it now houses additional forms via new custom record types. The forms object is used in the BAP ...</description>
    <fields>
        <fullName>AWL_Phone_Number__c</fullName>
        <label>AWL Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>A_Description__c</fullName>
        <defaultValue>&quot;I hereby apply for membership in the EPA Leave Bank. I authorize EPA to deduct one pay period accrual of annual leave (or such other amount as the Agency’s Leave Bank Board has established for this enrollment period) each leave year for deposit into the EPA Leave Bank until I terminate my membership.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>A. New Member Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>account type is selected in the purchase card request forms.</description>
        <inlineHelpText>account type</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>COOP</fullName>
                </value>
                <value>
                    <fullName>ERT</fullName>
                </value>
                <value>
                    <fullName>IMPREST ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>OSC</fullName>
                </value>
                <value>
                    <fullName>SACO</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>UTIL</fullName>
                </value>
                <value>
                    <fullName>FSSI</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
                <value>
                    <fullName>Purchase Cardholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Information__c</fullName>
        <defaultValue>&quot;Does this action involve the collection, generation, use, and/or reporting of environmental data; the design, construction, and operation of environmental technologies; or development of software, models, or methods?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Action Information</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ORD-111</description>
        <label>Additional Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormsORD111AdditionalReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>After_Award_Documentation__c</fullName>
        <defaultValue>&quot;(Competitive Vehicles, Non-Competitive Vehicles, Intramural)&quot;</defaultValue>
        <description>ORD-111</description>
        <label>After Award Documentation</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_subelement_submitting_office__c</fullName>
        <defaultValue>&quot;EPA00&quot;</defaultValue>
        <description>SF-182</description>
        <label>Agency, Subelement, Submitting Office #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name_Last_First_MI2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(
IF( ISBLANK( Prepare_Form_for__c ),
Type_1_Owner_Contact__r.FirstName &amp;&quot; &quot;&amp; Type_1_Owner_Contact__r.LastName,
 Prepare_Form_for__r.FirstName &amp;&quot; &quot;&amp;Prepare_Form_for__r.LastName
)),
&quot;[This field will populate after save.]&quot;,
IF( ISBLANK( Prepare_Form_for__c ),
Type_1_Owner_Contact__r.FirstName &amp;&quot; &quot;&amp; Type_1_Owner_Contact__r.LastName,
 Prepare_Form_for__r.FirstName &amp;&quot; &quot;&amp;Prepare_Form_for__r.LastName
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Routing_Options__c</fullName>
        <description>SF-182</description>
        <label>Select Training Official Routing Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HQ Office of Human Resources</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>Research Triangle Park</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <label>Approval Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Information__c</fullName>
        <defaultValue>&quot;Approver 1 is the Immediate Supervisor or Team Lead. Approver 2 is the Division Director or Second Line Manager.&quot;</defaultValue>
        <label>Approver Information</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_replacing_an_existing_AO__c</fullName>
        <label>Are you replacing an existing AO?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Reason__c</fullName>
        <label>Authorization Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Organizational Allocation</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autopopulated_Employee_ID__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Recipient_Name__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autopopulated Employee ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the EPA Leave Bank and my donation does not exceed the minimum contribution limits.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_Extra_Hour_Donation__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Extra Hour Donation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>B. Donate Hours (no waiver needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Award_Documentation__c</fullName>
        <defaultValue>&quot;(Competitive Vehicles Only)&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Before Award Documentation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Date_of_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Training_Start_Date__c),
&quot;[Will be populated by Training Start Date field.]&quot;, 
TEXT(Training_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Date of Development Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Instructions__c</fullName>
        <description>SF-182</description>
        <formula>CASE(Furnish_Invoice_to__c, 
  &quot;USEPA RTP Finance Center&quot;, 
        &quot;USEPA RTP Finance Center&quot;&amp;BR()&amp;
        &quot;Mail Code AA 216-01&quot;&amp;BR()&amp;
        &quot;4930 Old Page Road&quot;&amp;BR()&amp;
        &quot;Durham, NC 27703&quot;,
  &quot;USEPA Cincinnati Finance Center&quot;, 
        &quot;USEPA Cincinnati Finance Center&quot;&amp;BR()&amp;
        &quot;West Martin Luther King Dr&quot;&amp;BR()&amp;
        &quot;MS002&quot;&amp;BR()&amp;
        &quot;Cincinnati, Ohio 45268&quot;,
  &quot;Purchase Card Transaction&quot;,
        &quot;Purchase Card Holder’s Name: &quot;&amp; Select_Card_Holder__r.FirstName &amp;&quot; &quot;&amp; Select_Card_Holder__r.LastName &amp; BR() &amp;
        &quot;Purchase Card Holder’s Telephone Number: &quot;&amp; Card_Holder_s_Phone_Number__c,
&quot;[This field will populate after save.]&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Books_Materials__c</fullName>
        <description>SF-182</description>
        <label>Books &amp; Materials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Business justification for requesting a new card or check (Mission Critical).</inlineHelpText>
        <label>Business Justification for New Card\Chck</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C_Comment__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the EPA Leave Bank (enter # hours below). My donation exceeds the minimum contribution limits and I am seeking a waiver for the following reasons: (Note: A waiver is required to do this. See instructions at the top of this form.)&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>275</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C_Hours_Donated__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Reason__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>There is insufficient donated leave to carry the leave recipient through the period of the medical emergency.</fullName>
                </value>
                <value>
                    <fullName>I am a family member of the recipient and I wish to donate leave.</fullName>
                </value>
                <value>
                    <fullName>Enter reason in Comment field below:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>C. Donate Hours (waiver needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelling__c</fullName>
        <label>Cancelling?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Holder_s_Email__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK(Select_Card_Holder__c), 
&quot;&quot;, 
Select_Card_Holder__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_s_Phone_Number__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK(Select_Card_Holder__c), 
&quot;&quot;, 
 Select_Card_Holder__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder’s Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_1_Existing_Monthly_Limit__c</fullName>
        <label>Cardholder 1 Existing Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_1_Requested_Monthly_Limit__c</fullName>
        <label>Cardholder 1 Requested Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cardholder 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder 1)</relationshipLabel>
        <relationshipName>Forms4b</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardholder_2_Existing_Monthly_Limit__c</fullName>
        <label>Cardholder 2 Existing Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_2_Requested_Monthly_Limit__c</fullName>
        <label>Cardholder 2 Requested Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cardholder 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder 2)</relationshipLabel>
        <relationshipName>Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardholder_3_Existing_Monthly_Limit__c</fullName>
        <label>Cardholder 3 Existing Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_3_Requested_Monthly_Limit__c</fullName>
        <label>Cardholder 3 Requested Monthly Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cardholder_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cardholder 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder 3)</relationshipLabel>
        <relationshipName>Forms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardholder_AO_Display_Name__c</fullName>
        <defaultValue>$User.FirstName + &quot; &quot; +  $User.LastName</defaultValue>
        <description>Cardholder/AP display name on the card.</description>
        <label>Cardholder/AO Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_AO_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approving Official to be relieved of responsibility for the identified cardholder(s).</inlineHelpText>
        <label>Cardholder AO From</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder AO From)</relationshipLabel>
        <relationshipName>Forms3b</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardholder_AO_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Cardholder/AO Name if this Request is for Other, otherwise if the Request is For Myself, leave this blank.</inlineHelpText>
        <label>Cardholder/AO Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder/AO Name)</relationshipLabel>
        <relationshipName>Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cardholder_AO_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approving Official that will now assume responsibility for overight of the identified cardholder(s).</inlineHelpText>
        <label>Cardholder AO To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Cardholder AO To)</relationshipLabel>
        <relationshipName>Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Name_on_Card_Check_From__c</fullName>
        <label>Change Name on Card/Check From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Name_on_Card_Check_To__c</fullName>
        <label>Change Name on Card/Check To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Request_Type__c</fullName>
        <label>Check Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reorder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>$User.City</defaultValue>
        <description>city</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_1__c</fullName>
        <description>ORD-111</description>
        <label>Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_2__c</fullName>
        <description>ORD-111</description>
        <label>Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_AO_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that the AO is either the supervisor or one organizational (grade) level above the cardholder(s) that I/he/she will support.</inlineHelpText>
        <label>Confirm AO (Supervisor or 1 Level Above)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continue_In_Service_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-182</description>
        <label>Continue In Service Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continue_In_Service_Digital_Signature__c</fullName>
        <description>SF-182</description>
        <inlineHelpText>Clicking the &quot;Continue In Service Agreement Signature&quot; checkbox will sign this section upon saving the form.</inlineHelpText>
        <label>Continue In Service Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Expiration__c</fullName>
        <description>SF-182</description>
        <label>Continued Service Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Expires__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Continued_Service_Agreement_Expiration__c), 
&quot;[Will be populated by Continued Service Agreement Expiration field.]&quot;, 
TEXT(Continued_Service_Agreement_Expiration__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continued Service Agreement Expires:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Inst_Calc__c</fullName>
        <defaultValue>&quot;https://usepa.sharepoint.com/sites/OARM_Community/EPAU/Shared%20Documents/Forms/SF182%20Instructions.aspx&quot;</defaultValue>
        <description>SF-182</description>
        <label>Continued Service Agreement Inst &amp; Calc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement__c</fullName>
        <description>SF-182</description>
        <label>Continued Service Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Actions__c</fullName>
        <description>ORD-111</description>
        <label>Contract Actions:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Delivery Order</fullName>
                </value>
                <value>
                    <fullName>Simplified Acquisition</fullName>
                </value>
                <value>
                    <fullName>Task Order</fullName>
                </value>
                <value>
                    <fullName>Work Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <description>ORD-111</description>
        <label>Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Number_Code__c</fullName>
        <description>SF-182</description>
        <label>Course Number Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>SF-182</description>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Current_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the qualified recipient named below. I certify that this employee is not my immediate supervisor. (Enter # of hours below.)&quot;</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_Hours_Donated__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>D. Donate to specific Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_1_A_L_Hours__c</fullName>
        <label>Date 1 A/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1_End_Date_Time__c</fullName>
        <label>Date 1 End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_1_S_L_Hours__c</fullName>
        <label>Date 1 S/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1_Start_Date_Time__c</fullName>
        <label>Date 1 Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_1_Total_Work_Hours__c</fullName>
        <label>Date 1 Total Work Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_A_L_Hours__c</fullName>
        <label>Date 2 A/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_End_Date_Time__c</fullName>
        <label>Date 2 End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_2_S_L_Hours__c</fullName>
        <label>Date 2 S/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_Start_Date_Time__c</fullName>
        <label>Date 2 Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_2_Total_Work_Hours__c</fullName>
        <label>Date 2 Total Work Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Card_is_to_be_Closed__c</fullName>
        <label>Date Card is to be Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Format_Instructions__c</fullName>
        <defaultValue>&quot;Please click into each date or time entry field and select a value. All dates entered should be in MM/DD/YYYY format and all time entered should be in HH:MM AM/PM format.&quot;</defaultValue>
        <label>Date &amp; Time Format Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_to_Be_Reactivated__c</fullName>
        <label>Date to Be Reactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Changset_Name__c</fullName>
        <description>Name of the Changeset to deploy</description>
        <inlineHelpText>Name of the Changeset to deploy</inlineHelpText>
        <label>Deployment Changset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Destination__c</fullName>
        <description>Target sandbox for the deployment</description>
        <inlineHelpText>Target sandbox for the deployment</inlineHelpText>
        <label>Deployment Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integrate</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Source_Sandbox_Name__c</fullName>
        <formula>Deployment_Source_Sandbox__r.Name__c</formula>
        <inlineHelpText>Populates from the Deployment Source Sandbox Picklist</inlineHelpText>
        <label>Deployment Source Sandbox Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Source_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source sandbox for the deployment</description>
        <inlineHelpText>Source sandbox for the deployment</inlineHelpText>
        <label>Deployment Source Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Forms__c.Form_Type__c</field>
                <operation>equals</operation>
                <value>Developer Sandbox, Developer Pro Sandbox, Full Sandbox</value>
            </filterItems>
            <filterItems>
                <field>Forms__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BAP Provisioning</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_1__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Documentation_Type_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>R-2 and R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;Other Details&quot;)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_2__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X2_QA_Project_Plan__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;Other Details&quot;)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_3__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Documentation_Type_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>R-2 and R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;&quot;Other Details&quot;&quot;)&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Appropriation_Fund__c</fullName>
        <description>SF-182</description>
        <label>Direct Appropriation / Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>